# video-compression

./: CMakeLists.txt  LICENSE  README.md
include/: discrete_cosine_transform.hpp  helper.hpp  stream.hpp  yuv_stream.hpp
src/: discrete_cosine_transform.cpp  huffman.cpp  stream.cpp  uvid_compress.cpp  uvid_decompress.cpp
